# libnirs

./: .git-blame-ignore-revs  MultiLayerDerivation.tex  __init__.py  cuda.py  extinction_coeffs.py  fitting.py  layered_model.py  model.py  overrides.py  pyproject.toml  setup.py  utils.py
libnirs/: __init__.py  broadband.py  cuda.py  extc.npz  extinction_coeffs.py  fitting.py  fresnelx.py  kspace.py  layered_model.py  model.py  modelx.py  monte_carlo.py  overrides.py  photoacoustic.py  plotting.py  qrs.py  quadrature.py  special.py  statistical.py  typed_pmcx.py  utils.py  utilsx.py
