[build-system]
requires = ["setuptools>=62", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "libnirs"
version = "0.7.1"
description = "Library for NIRS analysis"
license = {text = "Proprietary"}
authors = [{name = "Julia Tatz", email = "julia.tatz@childrens.harvard.edu"}]
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "numba",
    "xarray"
]

[project.optional-dependencies]
accurate = ["numba-scipy @ git+https://github.com/numba/numba-scipy.git"]
broadband = ["pmcx"]
kspace = ["h5py"]
dev = ["sympy"]

[tool.setuptools]
package-data = {"libnirs"=['libnirs/extc.npz']}
