[build-system]
requires = ["setuptools>=62", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "libnirs"
version = "0.8.0"
description = "Library for NIRS analysis"
license = {text = "Proprietary"}
authors = [{name = "Julia Tatz", email = "julia.tatz@childrens.harvard.edu"}]
requires-python = ">=3.12"
dependencies = [
    "numpy>=2",
    "scipy",
    "array-api-compat",
    "array-api-extra",
    "jax",
]

[project.optional-dependencies]
broadband = ["numba", "xarray", "pmcx"]
# broadband = ["numba", "xarray", "pmcx @ git+https://github.com/jdtatz/mcx.git@diskarray-src"]
deprecated_models = ["numba"]
kspace = ["h5py"]
plotting = ["matplotlib"]
dev = ["sympy"]

[tool.setuptools]
packages = ["libnirs"]
package-data = {"libnirs"=['libnirs/extc.npz']}

[tool.black]
line-length = 120
